# Ryliox

./: .codeclimate.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .snyk  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  commitlint.config.js  config.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  launcher.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
core/: __init__.py  audit.py  cache.py  download_queue.py  dto.py  feature_flags.py  http_client.py  interfaces.py  kernel.py  logging_config.py  mappers.py  metrics.py  process_manager.py  repository.py  secrets.py  services.py  session_store.py  types.py  url_utils.py  validators.py
frontend/: .prettierrc  RADIX_IMPLEMENTATION_REPORT.md  astro.config.mjs  components.json  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.setup.ts
frontend/public/: manifest.json  service-worker.js
frontend/public/locales/: en.json  es.json
frontend/src/: env.d.ts
frontend/src/components/: AnimationComponents.tsx  App.tsx  App.tsx.bak  AriaLiveRegion.tsx  AuthStatusCard.tsx  BottomSheet.tsx  DownloadProgressCard.tsx  KeyboardShortcuts.tsx  LanguageSwitcher.tsx  MobileNav.tsx  SearchBooksCard.tsx  SkipLink.tsx  ThemeToggle.tsx  ToastNotifications.tsx
frontend/src/components/__tests__/: SearchBooksCard.test.tsx
frontend/src/components/download-progress/: ChapterSelector.tsx  DownloadActions.tsx  ErrorNotice.tsx  FormatSelector.tsx  ProgressStatus.tsx  SseStatusBadge.tsx  utils.ts
frontend/src/components/layouts/: BentoGrid.tsx
frontend/src/components/motion/: Gestures.tsx  LayoutAnimations.tsx  OptimizedAppear.tsx  index.ts
frontend/src/components/primitives/: Dialog.tsx  DropdownMenu.tsx  NavigationMenu.tsx  Popover.tsx  Tooltip.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  BeautifulToast.tsx  BookCover.tsx  Button.tsx  Card.tsx  CommandPalette.tsx  EmptyState.tsx  GlassCard.tsx  (+13 more)
frontend/src/hooks/: useAdvancedSearch.ts  useDownloadManager.ts  useMotionGestures.ts  useOptimizedAppear.ts
frontend/src/i18n/: config.ts
frontend/src/lib/: a11y-index.ts  a11y-utils.ts  advanced-types.ts  api-error.ts  api.ts  cn.ts  feature-flags.ts  focus-management.ts  query-keys.ts  types.ts  use-debounced-value.ts
frontend/src/pages/: index.astro
frontend/src/store/: book-store.ts
frontend/src/styles/: a11y.css  animations.css  design-system.md  design-tokens-2026.css  focus.css  global.css  motion-optimizations.css  oklch-palette.css  responsive.css
plugins/: __init__.py  assets.py  auth.py  base.py  book.py  chapters.py  downloader.py  epub.py  html_processor.py  output.py  pdf.py  system.py
plugins/pdf_styles/: print.css
tests/: conftest.py
tests/contract/: test_http_contracts.py
tests/e2e/: test_app_smoke.py
tests/integration/api/: conftest.py  test_progress_stream.py  test_smoke_endpoints.py
tests/integration/core/: test_download_queue_service_cancel.py
tests/unit/core/: test_download_queue.py  test_http_client.py  test_session_store.py
tests/unit/plugins/: test_assets_plugin.py  test_auth_plugin.py  test_book_plugin.py  test_chapters_plugin.py  test_downloader_plugin.py  test_html_processor_plugin.py  test_output_plugin.py
tests/unit/web/: test_dependencies_paths.py  test_routes_regressions.py
utils/: __init__.py  files.py
web/: api_utils.py  dependencies.py  schemas.py  server.py
web/routes/: __init__.py  auth.py  books.py  downloads.py  metrics.py  system.py
(+4 files in other folders)
